crates/solidity/testing/snapshots/bindings_output/enums/decls/generated/0.4.11.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
    ╭─[crates/solidity/testing/snapshots/bindings_output/enums/decls/input.sol:13:1]
    │
 13 │ enum ActionChoices { GoLeft, GoRight, GoStraight, SitStill }
    │ ──────────────────────────────┬──────────────────────────────  
    │                               ╰──────────────────────────────── Error occurred here.
────╯
References and definitions: 
    ╭─[crates/solidity/testing/snapshots/bindings_output/enums/decls/input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── def: 1
  2 │     enum Answer { Yes, No }
    │          ───┬──   ─┬─  ─┬  
    │             ╰────────────── def: 2
    │                    │    │  
    │                    ╰─────── def: 3
    │                         │  
    │                         ╰── def: 4
    │ 
  5 │ library LibTest {
    │         ───┬───  
    │            ╰───── def: 5
  6 │     enum Respuesta { Si, No }
    │          ────┬────   ─┬  ─┬  
    │              ╰─────────────── def: 6
    │                       │   │  
    │                       ╰────── def: 7
    │                           │  
    │                           ╰── def: 8
    │ 
  9 │ interface Iface {
    │           ──┬──  
    │             ╰──── def: 9
 10 │     enum Repondre { Oui, Non }
    │          ────┬───   ─┬─  ─┬─  
    │              ╰──────────────── def: 10
    │                      │    │   
    │                      ╰──────── def: 11
    │                           │   
    │                           ╰─── def: 12
────╯
